--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Emsolace Portfolio</title>
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Caveat:wght@500&family=Montserrat&family=Roboto:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
@@ -66,9 +67,17 @@
       <div class="col-md-6 h1-bgd">
         <h1>Welcome to EMSOLACE</h1>
         <h1 class="Em-P">PORTFOLIO</h1>
-        <img class="f-left" src="https://gdurl.com/9-Xs" alt="">
-        <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio and a kind
-            request that you drop your comment on the feedback section. Thank you.</em></h4>
+
+        <div class="container">
+        <!-- <img class="bck-logo" src="images/LOGO.png" alt=""> -->
+          <div class="content">
+            <img class="f-left" src="https://gdurl.com/9-Xs" alt="">
+
+            <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio and a kind
+                request that you drop your comment on the feedback section. Thank you.</em></h4>
+          </div>
+        </div>
+
       </div>
 
       <div class="col-md-6 ">
@@ -109,62 +118,62 @@
 
       <!-- IMAGES SECTION -->
       <section id="images">
-        <div class="image-sec-h2">
+        <div class="image-sec-h2 bg-opacity-10">
           <h2>IMAGES CATEGORIES</h2>
         </div>
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="images/Cake.png" alt="">
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/EMS LOGO.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="images/METRO TECH.png" alt="">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
+            <img src="images/Cake.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/Surface.png" alt="">
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
+            <img src=" images/METRO TECH.png" alt="">
           </div>
 
         </div>
 
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/owl.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/111.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/AFRETECH.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/SAMPLE.png" alt="">
           </div>
 
         </div>
 
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/SGC.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/FLOWER.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/Signup.png" alt="">
           </div>
 
-          <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="images/TODO.png" alt="">
+          <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
+            <img src="https://gdurl.com/Sf4N" alt="">
           </div>
           <button type="button" class="btn btn-outline-light btn-lg" name="button">More Images</button>
         </div>
