--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <body>
-  <div class="container-fluid">
+  <div id="Home" class="container-fluid">
 
     <nav class="navbar navbar-expand-lg navbar-Secondary ">
 
@@ -41,23 +41,23 @@
 
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav=link" href="">Home</a>
+            <a class="nav=link" href="#Home">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav=link" href="">Videos</a>
+            <a class="nav=link" href="#images">Images</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav=link" href="">Images</a>
+            <a class="nav=link" href="#videos">Videos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav=link" href="">Contact</a>
+            <a class="nav=link" href="#footer">Contact</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" style="transition: width 0.4s ease-in-out;" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success " type="submit">Search</button>
         </form>
       </div>
@@ -69,11 +69,12 @@
         <h1 class="Em-P">PORTFOLIO</h1>
 
         <div class="container">
-        <!-- <img class="bck-logo" src="images/LOGO.png" alt=""> -->
+          <!-- <img class="bck-logo" src="images/LOGO.png" alt=""> -->
           <div class="content">
             <img class="f-left" src="https://gdurl.com/9-Xs" alt="">
 
-            <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio and a kind
+            <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio and a
+                kind
                 request that you drop your comment on the feedback section. Thank you.</em></h4>
           </div>
         </div>
@@ -115,12 +116,49 @@
         </div>
 
       </div>
+<section id="tools">
+  <div class="row toolsRow">
+    <h2>My Work Tools and Rate of Experience</h2>
+    <div class="col ">
+      <img class="toolsImages"src="tools/atom.jfif" alt="">
+      <p>HTML/CSS.@80%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/figma.jfif" alt="">
+      <p>FIGMA.@95%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/ps.png" alt="">
+      <p>PHOTOSHOP.@80%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/ai.png" alt="">
+      <p>ILLUSTRATOR.@80%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/ae.jfif" alt="">
+      <p>AFTEREFFECTS.@70%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/pr.jfif" alt="">
+      <p>PREMIERPRO.@80%</p>
+    </div>
 
+  </div>
+</section>
+<div class="separate">
+<br>
+</div>
       <!-- IMAGES SECTION -->
       <section id="images">
         <div class="image-sec-h2 bg-opacity-10">
           <h2>IMAGES CATEGORIES</h2>
         </div>
+
+        <div class="separate2">
+        <br>
+        </div>
+
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="images/EMS LOGO.png" alt="">
@@ -169,21 +207,40 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src="images/Signup.png" alt="">
+            <img src="images/MusicApp.png" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
             <img src="https://gdurl.com/Sf4N" alt="">
           </div>
-          <button type="button" class="btn btn-outline-light btn-lg" name="button">More Images</button>
+
+          <div class="separate2">
+          <br>
+          </div>
+
+          <button  type="button" class="btn btn-outline-light btn-lg" name="button">More Images</button>
         </div>
       </section>
+
+
+
+      <div class="separate">
+      <br>
+      </div>
+
+
+
 
       <!-- VIDEO SECTION -->
       <section id="videos">
         <div class="video-sec-h2">
           <h2>VIDEOS/ANIMATED CATEGORIES</h2>
         </div>
+
+        <div class="separate2">
+        <br>
+        </div>
+
         <div class="row ">
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
             <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
@@ -211,11 +268,11 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1lFizIEqetDbV7ykhRq_FPNpOjKeU7bz6/preview" width="" height="350" allow="autoplay"></iframe>
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1FcGWYVY0TKvhEN-Y12u0KKHkdsAyUg5P/preview" width="" height="350" allow="autoplay"></iframe>
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
@@ -240,6 +297,11 @@
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
             <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
           </div>
+
+          <div class="separate2">
+          <br>
+          </div>
+
           <button type="button" class="btn btn-outline-light btn-lg" name="button">More Videos</button>
         </div>
 
@@ -247,12 +309,16 @@
 
       <!-- CONTACTS SECTION -->
       <footer id="footer">
-        <i class=" contact-icon fa-brands fa-facebook "></i>
-        <i class=" contact-icon fa-brands fa-square-instagram"></i>
-        <i class=" contact-icon fa-brands fa-twitter"></i>
-        <i class=" contact-icon fa-solid fa-envelope"></i>
 
-        <p class="footer-p">© Copyright Emsolace</p>
+            <i class=" contact-icon fa-brands fa-facebook "></i>
+            <i class=" contact-icon fa-brands fa-square-instagram"></i>
+            <i class=" contact-icon fa-brands fa-twitter"></i>
+            <i class=" contact-icon fa-solid fa-envelope"></i>
+
+            <p class="footer-p">© Copyright Emsolace</p>
+
+            <a href="#Home">Back Home</a>
+
 
       </footer>
 
