--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
           <div class="content">
             <img class="f-left" src="https://gdurl.com/9-Xs" alt="">
 
-            <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio and a
-                kind
-                request that you drop your comment on the feedback section. Thank you.</em></h4>
+            <h4> <em>Hi, My name is Emmanuel Solace Aluoghor shortened as EMSOLACE. I am a <b>Product Designer</b> with <b>UI/UX</b> experience. I'm so excited to see you on my humble site and just feel free to navigate through the portfolio.  Thank you.</em></h4>
           </div>
         </div>
 
