--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <!-- IMAGES SECTION -->
       <section id="images">
         <div class="image-sec-h2 bg-opacity-10">
-          <h2>IMAGES CATEGORIES</h2>
+          <h2>IMAGE CATEGORIES</h2>
         </div>
 
         <div class="separate2">
@@ -216,7 +216,7 @@
           <br>
           </div>
 
-          <button  type="button" class="btn btn-outline-light btn-lg" name="button">More Images</button>
+          <a class="btn btn-outline-light btn-lg" href="https://drive.google.com/drive/u/0/folders/1OgzWJYccdVUCMbKkq6VWIhiqWATaiv7c" role="button">More Images</a>
         </div>
       </section>
 
@@ -300,7 +300,8 @@
           <br>
           </div>
 
-          <button type="button" class="btn btn-outline-light btn-lg" name="button">More Videos</button>
+          <a class="btn btn-outline-light btn-lg" href="https://drive.google.com/drive/u/0/folders/1OgzWJYccdVUCMbKkq6VWIhiqWATaiv7c" role="button">More Videos</a>
+
         </div>
 
       </section>
@@ -308,10 +309,11 @@
       <!-- CONTACTS SECTION -->
       <footer id="footer">
 
-            <i class=" contact-icon fa-brands fa-facebook "></i>
-            <i class=" contact-icon fa-brands fa-square-instagram"></i>
-            <i class=" contact-icon fa-brands fa-twitter"></i>
-            <i class=" contact-icon fa-solid fa-envelope"></i>
+            <a href="https://web.facebook.com/emsolace" class=" contact-icon fa-brands fa-facebook "></a>
+            <a href="https://www.instagram.com/emsolace_/" class=" contact-icon fa-brands fa-square-instagram"></a>
+            <a href="https://twitter.com/emsolace_85071" class=" contact-icon fa-brands fa-twitter"></a>
+            <a href="emsolace@gmail.com" class=" contact-icon fa-solid fa-envelope"></a>
+            <a href="https://www.linkedin.com/in/emsolace/" class="contact-icon fa-brands fa-linkedin"></a>
 
             <p class="footer-p">© Copyright Emsolace</p>
 
