--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src="images/owl.png" alt="">
+            <img src="images/Bakery.png" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
@@ -205,7 +205,7 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src="images/MusicApp.png" alt="">
+            <img src="images/PRESHI2.png" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
@@ -274,7 +274,7 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1dPw8vM7pIeRA0gHnbR4IJrYJ1MVOnVpr/preview" width="" height="350" allow="autoplay"></iframe>
           </div>
 
         </div>
@@ -315,7 +315,7 @@
             <a href="emsolace@gmail.com" class=" contact-icon fa-solid fa-envelope"></a>
             <a href="https://www.linkedin.com/in/emsolace/" class="contact-icon fa-brands fa-linkedin"></a>
 
-            <p class="footer-p">© Copyright Emsolace</p>
+            <p class="footer-p">© Copyright emsolace</p>
 
             <a href="#Home">Back Home</a>
 
