Added file via upload
Added to html

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
           <div class="carousel-inner">
             <div class="carousel-item active h1-bgd2">
 
-              <img class="display-image" src="https://gdurl.com/Jc6v" alt="e-commerce-app">
+              <img src="images/Cake.png" alt="">
               <p><em> Figma Design: e-commerce App</em> </p>
             </div>
 
             <div class="carousel-item">
 
-              <img class="display-image Smata" src="https://gdurl.com/Sf4N" alt="lady-profile">
+              <img src="images/Bakery.png" alt="">
               <p><em>Product Design</em> </p>
             </div>
 
             <div class="carousel-item">
 
-              <iframe src="https://drive.google.com/file/d/17XIhAKDzmCbEdb_D54EX0CSoeQzobBHP/preview" width="480" height="340" allow="autoplay"></iframe>
+              <img src="gif/PRESHI.gif" alt="ASUS" style="width:320px;height:320px;">
               <p><em>Product Design with visual animation</em></p>
             </div>
 
@@ -140,6 +140,10 @@
     <div class="col">
       <img class="toolsImages"src="tools/pr.jfif" alt="">
       <p>PREMIERPRO.@80%</p>
+    </div>
+    <div class="col">
+      <img class="toolsImages"src="tools/cd.png" alt="">
+      <p>CORELDRAW.@95%</p>
     </div>
 
   </div>
@@ -197,7 +201,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src="images/SGC.png" alt="">
+            <img src="images/ADS.png" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
@@ -241,59 +245,59 @@
 
         <div class="row ">
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+                <img src="gif/ASUS.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/17XIhAKDzmCbEdb_D54EX0CSoeQzobBHP/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/PRESHI.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1UfmOWkMdC1rQOGkza7vpYLCtKGngiqRC/preview" width="" height="350" allow="autoplay"></iframe>
+          <img src="gif/AUDIENCE.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1vtFrSJPflX3xFOC6v7TGgQX6ptW2E0eo/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/queenstar.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
         </div>
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/11hX8y0_OmlEWG0sGoxFxXK1Yk2sGXScM/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/RESTAURANT.gif" alt="ASUS" style="width:320px;height:320px;">
 
             </video>
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1lFizIEqetDbV7ykhRq_FPNpOjKeU7bz6/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/Cinematic.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1FcGWYVY0TKvhEN-Y12u0KKHkdsAyUg5P/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/Powerpoint.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1dPw8vM7pIeRA0gHnbR4IJrYJ1MVOnVpr/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/BUSINESS.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
         </div>
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/Story.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/choir.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/TinDog.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <iframe src="https://drive.google.com/file/d/1daeSr5PnoPo8cGj5oxBdzEniJBYodN2w/preview" width="" height="350" allow="autoplay"></iframe>
+            <img src="gif/WEB.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="separate2">
@@ -314,6 +318,7 @@
             <a href="https://twitter.com/emsolace_85071" class=" contact-icon fa-brands fa-twitter"></a>
             <a href="emsolace@gmail.com" class=" contact-icon fa-solid fa-envelope"></a>
             <a href="https://www.linkedin.com/in/emsolace/" class="contact-icon fa-brands fa-linkedin"></a>
+            <a href="https://www.behance.net/emmanuelsolace" class="contact-icon fa-brands fa-behance"></a>
 
             <p class="footer-p">© Copyright emsolace</p>
 
