Added new files
Updated files occur

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src=" images/METRO TECH.png" alt="">
+            <img src=" images/360.png" alt="">
           </div>
 
         </div>
@@ -257,7 +257,7 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="gif/queenstar.gif" alt="ASUS" style="width:320px;height:320px;">
+            <img src="gif/MILKING.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
         </div>
@@ -285,7 +285,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="gif/Story.gif" alt="ASUS" style="width:320px;height:320px;">
+            <img src="gif/queenstar.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
