Add updated files
Updated

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
-            <img src="gif/TinDog.gif" alt="ASUS" style="width:320px;height:320px;">
+            <img src="gif/BFLIP.gif" alt="ASUS" style="width:320px;height:320px;">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6" style="border: 1px solid">
@@ -238,7 +238,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
-            <img src="images/EMS LOGO.png" alt="">
+            <img src="images/BRANDFLIP.png" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-sm-6 zoom" style="border: 1px solid">
